# LiOAvIZ-Lab9

./: .gitignore  CMakeLists.txt  README.md  Report_9.docx
cmake/: compiler_options.cmake
include/adapters/: console_adapter.h
include/backend/: graph_gen.h
include/config/: config_loader.h
include/core/: console.h
resources/config_files/: aliases.conf  graph_console.conf
src/: CMakeLists.txt  main.cpp
src/adapters/: console_adapter.cpp
src/backend/: graph_gen.cpp
src/config/: config_loader.cpp
tests/: CMakeLists.txt
